src/components/header/Header.module.css
.app-header,
.main-header {
  background-color: white !important;
}

.top-header {
  height: 2.5rem;
  line-height: 2.5rem;
  padding: 0 4%;
  display: block;
  background-color: #f5f5f5;
}

.top-header .inner {
  width: 88%;
  margin: 0 auto;
}

.button-group {
  float: right;
  margin-top: 0.25rem;
}

.main-header {
  height: 4rem;
  line-height: 4rem;
  padding: 1.25rem;
  margin: 0 auto;
}

.App-logo {
  width: 3rem;
  padding: 0 0.5rem;
  height: 4rem;
  float: left;
}

.title {
  font-family: 'Lofty';
  line-height: 4rem !important;
  display: inline;
  color: #5a5a5a !important;
}

.search-input {
  width: 20rem !important;
  line-height: 4rem;
  margin: 1rem 0 0 2.5rem;
}

.main-menu {
  margin: 0 auto;
  padding: 0 20% !important;
  display: flex !important;
  background-color: #fee370 !important;
  color: #5a5a5a !important;
  font-weight: bolder;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }

  to {
    transform: rotate(360deg);
  }
}

